--- a/data/View Data.ipynb
+++ b/data/View Data.ipynb
@@ -40,7 +40,7 @@
     "# read iris data set\n",
     "data_set = np.loadtxt(\"./iris.csv\", delimiter=',')\n",
     "\n",
-    "# x is features, y is lable\n",
+    "# x is features, y is label\n",
     "X, y = data_set[:, :4], data_set[:, 4].astype(np.int)"
    ]
   },
