--- a/Naive Bayes/Naive Bayes Algorithm.ipynb
+++ b/Naive Bayes/Naive Bayes Algorithm.ipynb
@@ -16,8 +16,15 @@
     "> 朴素贝叶斯算法公式推导：\n",
     ">> 朴素贝叶斯分类时，对给定的输入 $x$，通过学习到的模型计算后验概率分布 $P(Y=c_k | X=x)$，将后验概率最大的类作为 $x$ 的类输出。\n",
     ">> 后验概率计算根据贝叶斯定理如下：\n",
-    "$$P(Y=c_k|X=x) = \\frac{P(X=x|Y=c_k)P(Y=c_k)}{\\sum_{k} P(X=x|Y=c_k)P(Y=c_k)}$$\n",
-    "\n",
+    "$$P(Y=c_k|X=x) = \\frac{P(X=x|Y=c_k)P(Y=c_k)}{\\sum_{k} P(X=x|Y=c_k)P(Y=c_k)} \\qquad    (1)$$\n",
+    ">> 朴素贝叶斯法对条件概率分布作了条件独立性假设.\n",
+    "$$P(X=x|Y=c_k)=P(X^{(1)}=x^{(1)},\\cdots,X^{(n)}=x^{(n)}|Y=c_k)=\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k) \\qquad   (2)$$\n",
+    ">> 把公式(2)代入公式(1)得到朴素贝叶斯分类的基本公式(3)：\n",
+    "$$P(Y=c_k|X=x) = \\frac{P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k)}{\\sum_{k}P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k)},\\;k=1,2,3,\\cdots,K \\qquad    (3)$$\n",
+    ">> 朴素贝叶斯分类器表示如下：\n",
+    "$$y=f(x)=arg\\;{max}_{c_k}\\frac{P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k)}{\\sum_{k}P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k)}\\qquad   (4)$$\n",
+    ">> 由于(4)中分母对所有的$c_k$都是相同的，所以，\n",
+    "$$y=f(x)=arg\\;{max}_{c_k} P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k)\\qquad   (5)$$\n",
     "\n",
     "> <font color=red>备注：参考资料《统计学习方法》，李航 著</font>"
    ]
