modified naive bayes

--- a/Naive Bayes/Naive Bayes Algorithm.ipynb
+++ b/Naive Bayes/Naive Bayes Algorithm.ipynb
@@ -41,7 +41,19 @@
     ">> (3)确定实例$x$的类\n",
     "$$y=arg\\;{max}_{c_k} P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k)$$\n",
     "\n",
-    "> ***备注：参考资料《统计学习方法》，李航 著***"
+    "> 拉普拉斯平滑\n",
+    ">> 用极大似然估计可能会出现所要估计的概率值为0的情况。这时会影响到后验概率的计算结果，使分类产生偏差。解决这一问题的方法是采用**贝叶斯估计**。条件概率的贝叶斯估计是\n",
+    "$$P_λ(X^{(j)}=a_{jl}|Y=c_k)=\\frac{\\sum_{i=1}^NI(x_i^{(j)}=a_{jl},y_i=c_k)+λ}{\\sum_{i=1}^NI(y_i=c_k)+S_jλ}\\qquad(6)$$\n",
+    ">> 式中$λ\\geq0$.等价于在随机变量各个取值的频数上赋予一个正数$λ>0$.当$λ=0$时就是极大似然估计.取$λ=1$，这时称为拉普拉斯平滑(Laplace smoothing).显然，对任何$l=1,2,\\cdots,K$，有\n",
+    "$$P_λ(X^{(j)}=a_{jl}|Y=c_k)>0$$\n",
+    "$$\\sum_{k}^{S_j} P(X^{(j)}=a_{jl}|Y=c_k)=1$$\n",
+    ">> 先验概率的贝叶斯估计是\n",
+    "$$P_λ(Y=c_k)=\\frac{\\sum_{i=1}^NI(y_i=c_k)+λ}{N+Kλ}$$\n",
+    "\n",
+    "> ***备注：参考资料《统计学习方法》，李航 著***\n",
+    "\n",
+    "Naive Bayes Algorithm Python实现\n",
+    "================="
    ]
   },
   {
