--- a/Naive Bayes/Naive Bayes Algorithm.ipynb
+++ b/Naive Bayes/Naive Bayes Algorithm.ipynb
@@ -32,7 +32,7 @@
     "\n",
     ">> (1)计算先验概率及条件概率\n",
     "$$P(Y=c_k)=\\frac{\\sum_{i=1}^NI(y_i=c_k)}{N},\\;k=1,2,\\cdots,K$$\n",
-    "$$P(X^{(J)}=a_{jl}|Y=c_k)=\\frac{\\sum_{i=1}^NI(x_i^{(j)}=a_{jl},y_i=c_k)}{\\sum_{i=1}^NI(y_i=c_k)}$$\n",
+    "$$P(X^{(j)}=a_{jl}|Y=c_k)=\\frac{\\sum_{i=1}^NI(x_i^{(j)}=a_{jl},y_i=c_k)}{\\sum_{i=1}^NI(y_i=c_k)}$$\n",
     "$$j=1,2,\\cdots,n;\\;l=1,2,\\cdots,S_j;\\;k=1,2,\\cdots,K$$\n",
     "\n",
     ">> (2)对于给定的实例$x={(x^{(1)},x^{(2)},\\cdots,x^{(n)})}^T$，计算\n",
@@ -43,18 +43,132 @@
     "\n",
     "> 拉普拉斯平滑\n",
     ">> 用极大似然估计可能会出现所要估计的概率值为0的情况。这时会影响到后验概率的计算结果，使分类产生偏差。解决这一问题的方法是采用**贝叶斯估计**。条件概率的贝叶斯估计是\n",
-    "$$P_λ(X^{(j)}=a_{jl}|Y=c_k)=\\frac{\\sum_{i=1}^NI(x_i^{(j)}=a_{jl},y_i=c_k)+λ}{\\sum_{i=1}^NI(y_i=c_k)+S_jλ}\\qquad(6)$$\n",
-    ">> 式中$λ\\geq0$.等价于在随机变量各个取值的频数上赋予一个正数$λ>0$.当$λ=0$时就是极大似然估计.取$λ=1$，这时称为拉普拉斯平滑(Laplace smoothing).显然，对任何$l=1,2,\\cdots,K$，有\n",
-    "$$P_λ(X^{(j)}=a_{jl}|Y=c_k)>0$$\n",
+    "$$P_\\lambda(X^{(j)}=a_{jl}|Y=c_k)=\\frac{\\sum_{i=1}^NI(x_i^{(j)}=a_{jl},y_i=c_k)+\\lambda}{\\sum_{i=1}^NI(y_i=c_k)+S_j\\lambda}\\qquad(6)$$\n",
+    ">> 式中$\\lambda\\geq0$.等价于在随机变量各个取值的频数上赋予一个正数$\\lambda>0$.当$\\lambda=0$时就是极大似然估计.取$\\lambda=1$，这时称为拉普拉斯平滑(Laplace smoothing).显然，对任何$l=1,2,\\cdots,K$，有\n",
+    "$$P_\\lambda(X^{(j)}=a_{jl}|Y=c_k)>0$$\n",
     "$$\\sum_{k}^{S_j} P(X^{(j)}=a_{jl}|Y=c_k)=1$$\n",
     ">> 先验概率的贝叶斯估计是\n",
-    "$$P_λ(Y=c_k)=\\frac{\\sum_{i=1}^NI(y_i=c_k)+λ}{N+Kλ}$$\n",
+    "$$P_\\lambda(Y=c_k)=\\frac{\\sum_{i=1}^NI(y_i=c_k)+\\lambda}{N+K\\lambda}$$\n",
     "\n",
     "> ***备注：参考资料《统计学习方法》，李航 著***\n",
     "\n",
-    "Naive Bayes Algorithm Python实现\n",
+    "> 贝叶斯算法的优缺点：\n",
+    ">> 优点：在数据较少的情况下仍然有效，可以处理多类别问题；\n",
+    "\n",
+    ">> 缺点：对于输入数据的准备方式较为敏感；\n",
+    "\n",
+    ">> 适用数据类型：标称型数据.\n",
+    "\n",
     "================="
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 读取语料\n",
+    "def textParse(bigString):\n",
+    "    import re\n",
+    "    listOfTokens = re.split(r'\\W*', bigString)\n",
+    "    return [tok.lower() for tok in listOfTokens if len(tok) > 2]\n",
+    "\n",
+    "# 创建一个包含所有文档中出现的不重复词的列表\n",
+    "def createVocabList(dataSet ): \n",
+    "    vocabSet = set ([])\n",
+    "    for document in dataSet:\n",
+    "        vocabSet = vocabSet | set(document) \n",
+    "    # print vocabSet\n",
+    "    return list(vocabSet)\n",
+    "\n",
+    "# （词袋模型）输入词汇表及某个文档，输出文档向量，向量的每个元素为1或0，分别表示词汇中的单词再输入文档中是否出现\n",
+    "def setOfWords2Vec(vocabList, inputSet):\n",
+    "    returnVec = [0]*len(vocabList) \n",
+    "    for word in inputSet:\n",
+    "        if word in vocabList:\n",
+    "            returnVec[vocabList.index(word)] += 1\n",
+    "        else: \n",
+    "            print \"the word：%s is not in my Vocabulary!\" % word \n",
+    "    return returnVec\n",
+    "\n",
+    "def spamTest():\n",
+    "    import random\n",
+    "    docList = []; classList = []; fullText = []\n",
+    "    for i in range(1, 26):\n",
+    "        wordList = textParse(open('/Users/zhangxingbin/ml_algorithms/data/email/spam/%d.txt' % i).read())\n",
+    "        docList.append(wordList)\n",
+    "        fullText.extend(wordList)\n",
+    "        classList.append(1)\n",
+    "        wordList = textParse(open('/Users/zhangxingbin/ml_algorithms/data/email/ham/%d.txt' % i).read())\n",
+    "        docList.append(wordList)\n",
+    "        fullText.extend(wordList)\n",
+    "        classList.append(0)\n",
+    "    vocabList = createVocabList(docList)\n",
+    "    trainingSet = range(50); testSet=[]\n",
+    "    for i in range(10):\n",
+    "        randIndex = int(random.uniform(0, len(trainingSet)))\n",
+    "        testSet.append(trainingSet[randIndex])\n",
+    "        del(trainingSet[randIndex])\n",
+    "    trainMat = []; trainClasses = []\n",
+    "    for docIndex in trainingSet:\n",
+    "        trainMat.append(setOfWords2Vec(vocabList, docList[docIndex]))\n",
+    "        trainClasses.append(classList[docIndex])\n",
+    "\n",
+    "    return trainMat, trainClasses, testSet\n",
+    "#     print vocabList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spamTest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 训练函数\n",
+    "def train(trainMatrix, trainCategory):\n",
+    "    numTrainDocs = len(trainMatrix)\n",
+    "    numWords = len(trainMatrix[0])\n",
+    "    pAbusive = sum(trainCategory) / float(numTrainDocs)   # \n",
+    "    \n",
+    "    pONum = zeros (numWords); \n",
+    "    plNum = zeros (numWords)\n",
+    "    pODenom = 0.0; \n",
+    "    plDenom = 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多项式模型\n",
+    "--------\n",
+    "> 文档$d$属于类别$c$的概率\n",
+    "$$P(c|d)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
