--- a/Naive Bayes/Naive Bayes Algorithm.ipynb
+++ b/Naive Bayes/Naive Bayes Algorithm.ipynb
@@ -72,16 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 读取语料\n",
     "def textParse(bigString):\n",
     "    import re\n",
-    "    listOfTokens = re.split(r'\\W*', bigString)\n",
+    "    listOfTokens = re.split('\\W+', bigString)\n",
     "    return [tok.lower() for tok in listOfTokens if len(tok) > 2]\n",
     "\n",
     "# 创建一个包含所有文档中出现的不重复词的列表\n",
@@ -99,7 +97,7 @@
     "        if word in vocabList:\n",
     "            returnVec[vocabList.index(word)] += 1\n",
     "        else: \n",
-    "            print \"the word：%s is not in my Vocabulary!\" % word \n",
+    "            print(\"the word：%s is not in my Vocabulary!\" % word )\n",
     "    return returnVec\n",
     "\n",
     "# 将垃圾邮件以及正常邮件进行分词、构造词袋模型、分割训练以及测试集\n",
@@ -108,17 +106,17 @@
     "    import numpy as np\n",
     "    docList = []; classList = []; fullText = []\n",
     "    for i in range(1, 26):\n",
-    "        wordList = textParse(open(\"/Users/zhangxingbin/ml_algorithms/data/email/spam/%d.txt\" % i).read())\n",
+    "        wordList = textParse(open(\"/Users/zhangxingbin/ml_algorithms/data/email/spam/%d.txt\" % i, encoding = 'cp1252').read())\n",
     "        docList.append(wordList)\n",
     "        fullText.extend(wordList)\n",
     "        classList.append(1)\n",
-    "        wordList = textParse(open('/Users/zhangxingbin/ml_algorithms/data/email/ham/%d.txt' % i).read())\n",
+    "        wordList = textParse(open('/Users/zhangxingbin/ml_algorithms/data/email/ham/%d.txt' % i, encoding = 'cp1252').read())\n",
     "        docList.append(wordList)\n",
     "        fullText.extend(wordList)\n",
     "        classList.append(0)\n",
     "    vocabList = createVocabList(docList)\n",
-    "    trainingSet = range(50); testSet=[]\n",
-    "    for i in range(10):\n",
+    "    trainingSet = list(range(0, 50)); testSet=[]\n",
+    "    for i in list(range(0, 10)):\n",
     "        randIndex = int(random.uniform(0, len(trainingSet)))\n",
     "        testSet.append(trainingSet[randIndex])\n",
     "        del(trainingSet[randIndex])\n",
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -210,7 +208,7 @@
     "            result = results[cls]\n",
     "            clazz = cls\n",
     "\n",
-    "    print \"testSet's label is: \", clazz"
+    "    print(\"testSet's label is: \", clazz)"
    ]
   },
   {
@@ -223,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testSet's label is:  1\n"
+      "testSet's label is:  0\n"
      ]
     }
    ],
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -293,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -370,22 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:18: RuntimeWarning: divide by zero encountered in log\n",
-      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:18: RuntimeWarning: invalid value encountered in multiply\n"
+      "[1 1]\n"
      ]
     }
    ],
@@ -411,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -448,25 +438,34 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
