--- a/Naive Bayes/Naive Bayes Algorithm.ipynb
+++ b/Naive Bayes/Naive Bayes Algorithm.ipynb
@@ -43,6 +43,9 @@
     ">> (3)确定实例$x$的类\n",
     "$$y=arg\\;{max}_{c_k} P(Y=c_k)\\prod_{j=1}^n P(X^{(j)}=x^{(j)}|Y=c_k) \\qquad   (9)$$\n",
     "\n",
+    ">> 公式(9)在对数空间上表示为如下的线性模型：\n",
+    "$$\\log p(C_k) + \\sum_{i=1}^n x_i \\cdot \\log p_{ki}=b+\\bf w_{\\kappa}^T \\bf x$$\n",
+    "\n",
     "> 拉普拉斯平滑\n",
     "  ----------\n",
     ">> 用极大似然估计可能会出现所要估计的概率值为0的情况。这时会影响到后验概率的计算结果，使分类产生偏差。解决这一问题的方法是采用**贝叶斯估计**。条件概率的贝叶斯估计是\n",
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,11 +109,11 @@
     "    import numpy as np\n",
     "    docList = []; classList = []; fullText = []\n",
     "    for i in range(1, 26):\n",
-    "        wordList = textParse(open(\"/Users/zhangxingbin/ml_algorithms/data/email/spam/%d.txt\" % i, encoding = 'cp1252').read())\n",
+    "        wordList = textParse(open(\"../data/email/spam/%d.txt\" % i, encoding = 'cp1252').read())\n",
     "        docList.append(wordList)\n",
     "        fullText.extend(wordList)\n",
     "        classList.append(1)\n",
-    "        wordList = textParse(open('/Users/zhangxingbin/ml_algorithms/data/email/ham/%d.txt' % i, encoding = 'cp1252').read())\n",
+    "        wordList = textParse(open('../data/email/ham/%d.txt' % i, encoding = 'cp1252').read())\n",
     "        docList.append(wordList)\n",
     "        fullText.extend(wordList)\n",
     "        classList.append(0)\n",
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -221,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testSet's label is:  0\n"
+      "testSet's label is:  1\n"
      ]
     }
    ],
@@ -250,6 +253,19 @@
     "\n",
     "多项式 Naive Bayes (词频型)\n",
     "----------------\n",
+    "> MultinomialNB 实现了数据服从多项式分布时的贝叶斯算法，它也是文本分类领域的两种典型算法之一(这里数据通常以词向量的形式表示，tf-idf向量在这里也表现的很好)。 这个分布被参数化成向量：$\\theta_y = (\\theta_{y1},\\cdots,\\theta_{yn})$\n",
+    "\n",
+    "> 对于每一个类别$y$，参数$n$表示特征数量（文本分类中表示词向量的大小）\n",
+    "\n",
+    "> $\\theta_{yi}$表示有$P(x_i|y)$的概率对于特征$i$在一个样本中的被类$y$所拥有。\n",
+    "\n",
+    "> 参数$\\theta_y$被平滑的极大似然估计法所估计，也就是说，相关频率计算：\n",
+    "$$\\hat{\\theta}_{yi}=\\frac{N_{yi}+\\alpha}{N_y+\\alpha n}$$\n",
+    "\n",
+    "> 这里$N_{yi}=\\sum_{x \\in T}x_i$是特征$i$在训练集$T$中，在一个属于$y$类的样本中出现的次数，而$N_Y=\\sum_{i=1}^{\\mid T \\mid}N_{yi}$是在类$y$中所有的特征的数量和\n",
+    "\n",
+    "> 平滑先验$\\alpha \\geq 0$可引入不在训练样本中的特征，同时防止0概率在未来的计算中出现。如果$\\alpha = 1$，称为拉普拉斯平滑。\n",
+    "#### NLP中的理解\n",
     "> 多项式模型是以\"单词\"为统计单位，即统计某个单词在文档中出现的次数，当某个特征词在某个文档中出现多次，多项式模型会计算多次。这个模型符合$NLP$的做法。其基本原理如下：\n",
     ">> 在多项式模型中，设某文档$d=(t_1,t_2,\\cdots,t_k)$，$t_k$是该文档中出现过的单词，$\\color{#F00}{允许重复}$，则先验概率$$P(c)=\\frac{类c下单词总数}{整个训练样本的单词总数}$$\n",
     "\n",
@@ -258,63 +274,71 @@
     "\n",
     ">> $V$是训练样本的单词表（即抽取单词，单词出现多次，只算一个），$|V|$则表示训练样本包含多少种单词。$P(t_k|c)$可以看作是单词$t_k$在证明$d$属于类$c$上提供了多大的证据，而$P(c)$则可以认为是类别$c$在整体上占多大比例(有多大可能性)。\n",
     "\n",
-    "多项式 Naive Bayes实现\n",
+    "多项式 Naive Bayes 实现\n",
     "-------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MultinomialNB(object):\n",
     "    def __init__(self, alpha=1.0):\n",
+    "        # 初始化默认拉普拉斯平滑参数\n",
     "        self.alpha = alpha\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        ''' 计算先验概率 '''\n",
+    "        # 获取样本大小\n",
     "        count_sample = X.shape[0]\n",
+    "        # 根据标签将样本分开\n",
     "        separated = [[x for x, t in zip(X, y) if t == c] for c in np.unique(y)]\n",
     "        self.class_log_prior_ = [(np.log(len(i)) - np.log(count_sample)) for i in separated]\n",
+    "        \n",
+    "        ''' 计算条件概率 '''\n",
+    "        # 拉普拉斯平滑\n",
     "        count = np.array([np.array(i).sum(axis=0) for i in separated]) + self.alpha\n",
-    "        self.feature_log_prob_ = np.log(count)-np.log(count.sum(axis=1)[np.newaxis].T)\n",
+    "        # 极大似然估计\n",
+    "        self.feature_log_prob_ = np.log(count) - np.log(count.sum(axis=1)[np.newaxis].T)\n",
+    "        \n",
     "        return self\n",
     "\n",
     "    def predict_log_proba(self, X):\n",
+    "        ''' 对应公式(9): 先验概率 / 条件概率 => log(先验概率) + log(条件概率)'''\n",
     "        return [(self.feature_log_prob_ * x).sum(axis=1) + self.class_log_prior_ for x in X]\n",
     "\n",
     "    def predict(self, X):\n",
+    "        ''' 返回最大概率值对应的类别 '''\n",
     "        return np.argmax(self.predict_log_proba(X), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = np.array([\n",
-    "    [2, 1, 0, 0, 0, 0],\n",
-    "    [2, 0, 1, 0, 0, 0],\n",
-    "    [1, 0, 0, 1, 0, 0],\n",
-    "    [1, 0, 0, 0, 1, 1]\n",
-    "])\n",
-    "\n",
-    "y = np.array([0, 0, 0, 1])\n",
+    "# 验证多项式模型\n",
+    "X, y, X_test = spamTest()\n",
     "\n",
     "nb = MultinomialNB().fit(X, y)\n",
     "X_test = np.array([[2, 1, 0, 0, 0, 0], [1, 0, 0, 0, 1, 1]])\n",
-    "print(nb.predict(X_test))"
+    "nb.predict(X[:1])"
    ]
   },
   {
@@ -323,13 +347,24 @@
    "source": [
     "伯努利 Naive Bayes (文档型)\n",
     "------------------------\n",
+    "\n",
+    "> BernoulliNB 实现了对于服从多元伯努利分布的数据的朴素贝叶斯训练和分类算法；对于大量特征，每一个特征都是一个0-1变量 (Bernoulli, boolean)。 因此，这个类要求样本集合以 0-1 特征向量的方式展现。如果接收到了其他类型的数据作为参数，一个 BernoulliNB 实例会把输入数据二元化(取决于 binarize 参数设置)\n",
+    "\n",
+    "> 朴素贝叶斯的伯努利模型是基于以下公式：\n",
+    "$$P(x_i|y)=P(i|y)x_i + (1-P(i|y))(1-x_i) \\qquad (11)$$ \n",
+    "\n",
+    "> 其似然函数如下：\n",
+    "$$P(x|C_k)=\\prod_{i=1}^n p_{k_i}^{x_i}{(1-p_{k_i})}^{(1-x_i)} $$\n",
+    "\n",
+    "> 其中$p_{k_i}$表示类别$C_k$生成term $w_i$的概率。这个模型通常用于短文本分类。\n",
+    "\n",
+    "> 在文本分类的情境中，被用来训练和使用这一分类器的是词语同现向量 (word occurrence vectors) 而不是词频向量 (word count vectors)。 BernoulliNB 可能尤其会在小数据集时表现良好。如果时间允许，推荐试用以上所有模型进行评价。\n",
+    "\n",
     "> 伯努利模型是以“文档”为统计单位，即统计某个特征词出现在多少个文档当中，若某个特征词在某个文档中出现了多次，那么伯努利模型只是计算一次。\n",
     "\n",
-    ">> $P(c)= \\frac{类c下文件总数}{整个训练样本的文件总数}$\n",
+    ">> 先验概率：$$P(c)= \\frac{类c下文件总数}{整个训练样本的文件总数}$$\n",
     "\n",
-    ">> $P(t_k|c)=\\frac{类c下包含单词t_k的文件数+1}{类c下文件总数+2}$\n",
-    "\n",
-    ">> 备注：$P(t_k|c)$中的(类$c$下文件总数+2) 不是网上流传的(类$c$下单词总数+2)。\n",
+    ">> 条件概率：$$P(t_k|c)=\\frac{类c下包含单词t_k的文件数+1}{类c下文件总数+2}$$\n",
     "\n",
     "伯努利 Naive Bayes实现\n",
     "-------------------"
@@ -337,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -345,12 +380,16 @@
    "source": [
     "class BernoulliNB(object):\n",
     "    def __init__(self, alpha=1.0):\n",
+    "        # 初始化默认拉普拉斯平滑参数\n",
     "        self.alpha = alpha\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        ''' 计算先验概率 '''\n",
     "        count_sample = X.shape[0]\n",
     "        separated = [[x for x, t in zip(X, y) if t == c] for c in np.unique(y)]\n",
     "        self.class_log_prior_ = [(np.log(len(i)) - np.log(count_sample)) for i in separated]\n",
+    "        \n",
+    "        ''' 计算条件概率 '''\n",
     "        count = np.array([np.array(i).sum(axis=0) for i in separated]) + self.alpha\n",
     "        smoothing = 2 * self.alpha\n",
     "        n_doc = np.array([len(i) + smoothing for i in separated])\n",
@@ -358,17 +397,17 @@
     "        return self\n",
     "\n",
     "    def predict_log_proba(self, X):\n",
-    "        return [(np.log(self.feature_prob_) * x +\n",
-    "                 np.log(1 - self.feature_prob_) * np.abs(x - 1)\n",
-    "                 ).sum(axis=1) + self.class_log_prior_ for x in X]\n",
+    "        ''' 公式(11)的实现 '''\n",
+    "        return [(np.log(self.feature_prob_) * x + np.log(1 - self.feature_prob_) * np.abs(x - 1)).sum(axis=1) + self.class_log_prior_ for x in X]\n",
     "\n",
     "    def predict(self, X):\n",
+    "        ''' 返回最大概率值对应的类别 '''\n",
     "        return np.argmax(self.predict_log_proba(X), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +419,16 @@
     }
    ],
    "source": [
+    "# 验证伯努利朴素贝叶斯\n",
+    "X = np.array([\n",
+    "    [2,1,0,0,0,0],\n",
+    "    [2,0,1,0,0,0],\n",
+    "    [1,0,0,1,0,0],\n",
+    "    [1,0,0,0,1,1]\n",
+    "])\n",
+    "\n",
+    "y = np.array([0,0,0,1])\n",
+    "\n",
     "X_test = np.array([[1, 0, 0, 0, 1, 1], [1, 0, 0, 0, 1, 1]])\n",
     "\n",
     "nb = BernoulliNB(alpha=1).fit(np.where(X > 0, 1, 0), y)\n",
@@ -392,8 +441,12 @@
    "source": [
     "高斯 Naive Bayes\n",
     "--------------\n",
-    "> 当一些特征是连续性的值时，就可以采用高斯模型，一般是假设特征的分布是高斯分布。\n",
-    ">> $$P(x_i|y_k)=\\frac{1}{\\sqrt{2\\pi\\sigma^2y_k}}exp(-\\frac{(x_i-\\mu_{yk})^2}{2\\sigma^2y_k})$$\n",
+    "> 当一些特征是连续性的值时，就可以采用高斯模型，一般是假设特征的分布是高斯分布。假设训练集中有一个连续属性$x$。我们首先对数据根据类别分类，然后计算每个类别中$x$的均值和方差。令$\\mu_c$表示为$x$在$c$类上的均值，令$\\sigma^2_c$为$x$在$c$类上的方差。在给定类中某个值的概率 $P(x=v|c)$，可以通过将$v$表示为均值为$\\mu_c$，方差为$\\sigma^2_c$的正态分布计算出来。\n",
+    "\n",
+    ">> 条件概率\n",
+    " $$P(x=v|c)=\\frac{1}{\\sqrt{2\\pi\\sigma^2y_c}} e^{-\\frac{(v-\\mu_c)^2}{2{\\sigma^2}_c}} \\qquad(12)$$\n",
+    "\n",
+    "> 处理连续数值问题的另一种常用的技术是通过离散化连续数值的方法。通常，当训练样本数量较少或者是精确的分布已知时，通过概率分布的方法是一种更好的选择。 在大量样本的情形下离散化的方法表现更优，因为大量的样本可以学习到数据的分布。由于朴素贝叶斯是一种典型的用到大量样本的方法（越大计算量的模型可以产生越高的分类精确度），所以朴素贝叶斯方法都用到离散化方法，而不是概率分布估计的方法。 \n",
     "\n",
     "高斯 Naive Bayes 实现\n",
     "--------------"
@@ -401,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -412,11 +465,13 @@
     "        pass\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        ''' 将样本按照类别分开，计算出分开后样本的均值以及方差 '''\n",
     "        separated = [[x for x, t in zip(X, y) if t == c] for c in np.unique(y)]\n",
     "        self.model = np.array([np.c_[np.mean(i, axis=0), np.std(i, axis=0)] for i in separated])\n",
     "        return self\n",
     "\n",
     "    def _prob(self, x, mean, std):\n",
+    "        ''' 公式(12)的实现 '''\n",
     "        exponent = np.exp(- ((x - mean)**2 / (2 * std**2)))\n",
     "        return np.log(exponent) - np.log((np.sqrt(2 * np.pi) * std))\n",
     "\n",
@@ -432,12 +487,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.91893853320467267"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 使用鸢尾花数据验证高斯朴素贝叶斯\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "iris = datasets.load_iris()\n",
+    "nb = GaussianNB().fit(iris.data, iris.target)\n",
+    "\n",
+    "nb._prob(0, 0, 1)"
+   ]
   },
   {
    "cell_type": "code",
