--- a/Naive Bayes/Naive Bayes Algorithm.ipynb
+++ b/Naive Bayes/Naive Bayes Algorithm.ipynb
@@ -76,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 读取语料\n",
@@ -281,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class MultinomialNB(object):\n",
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +500,7 @@
        "-0.91893853320467267"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
