--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -22,50 +22,65 @@
     "> 线性回归试图学得$$f(x_i)=\\omega x_i + b，使得f(x_i)\\approx y_i$$\n",
     "\n",
     "> **均方误差**是回归任务中最常用的性能度量，因此可以试图让均方误差最小化来求解$\\omega$和$b$\n",
-    "$$(\\omega^*,b^*)={arg \\; min}_{(\\omega,b)}\\sum_{i=1}^m{(f(x_i)-y_i)}^2 ={arg \\; min}_{(\\omega,b)}\\sum_{i=1}^m{(y_i-\\omega x_i - b)}^2 \\qquad (1)$$\n",
+    "$$\\begin{align}\n",
+    "(\\omega^*,b^*) &={arg \\; min}_{(\\omega,b)}\\sum_{i=1}^m{(f(x_i)-y_i)}^2  \\\\\n",
+    "&={arg \\; min}_{(\\omega,b)}\\sum_{i=1}^m{(y_i-\\omega x_i - b)}^2 \\qquad (1)\n",
+    "\\end{align}$$\n",
     "\n",
     "> 均方误差有非常好的几何意义，它对应了重用的欧几里得距离或简称“欧氏距离”$(Eucliean\\;distanc)$. 基于均方误差最小化来进行模型求解的方法称为“最小二乘法”$（least\\;square\\;method）$. 在线性回归中，最小二乘法就是试图找到一条直线，使所有样本到直线上的欧氏距离之和最小。\n",
     "\n",
     "> 求解$\\omega$和$b$使$E_{(\\omega, b)}=\\sum_{i=1}^m(y_i-\\omega x_i -b)^2$最小化的过程，称为线性回归模型的最小二乘“参数估计”（$parameter\\;estimetion$）.我们可以将$E_{(\\omega,b)}$分别对$\\omega$和$b$求导，得到\n",
-    "$$\\frac{\\partial E_{(\\omega, b)}}{\\partial \\omega }=2\\bigl(\\omega \\sum_{i=1}^m x_i^2-\\sum_{i=1}^m(y_i-b)x_i\\bigr)\\qquad (2)$$\n",
-    "$$\\frac{\\partial E_{(\\omega, b)}}{\\partial b}=2\\bigl(mb-\\sum_{i=1}^m(y_i-\\omega x_i)\\bigr)\\qquad (3)$$\n",
+    "$$\\begin{align}\n",
+    "& \\frac{\\partial E_{(\\omega, b)}}{\\partial \\omega }=2\\bigl(\\omega \\sum_{i=1}^m x_i^2-\\sum_{i=1}^m(y_i-b)x_i\\bigr)\\qquad (2) \\\\\n",
+    "& \\frac{\\partial E_{(\\omega, b)}}{\\partial b}=2\\bigl(mb-\\sum_{i=1}^m(y_i-\\omega x_i)\\bigr)\\qquad (3)\n",
+    "\\end{align}$$\n",
     "\n",
-    "> 然后令（2）、（3）为零可得$\\omega$和$b$最优解的闭式（$closed-form$）解\n",
-    "$$\\omega=\\frac{\\sum_{i=1}^my_i(x_i-\\bar{x})}{\\sum_{i=1}^mx_i^2-{\\frac{1}{m}}{\\bigl({\\sum_{i=1}^mx_i}\\bigr)}^2}\\qquad (4)$$\n",
-    "$$b={\\frac{1}{m}}\\sum_{i=1}^m(y_i-\\omega x_i)\\qquad(5)$$\n",
+    "> 然后令(2)、(3)为零可得$\\omega$和$b$最优解的闭式（$closed-form$）解\n",
+    "$$\\begin{align}\n",
+    "& \\omega=\\frac{\\sum_{i=1}^my_i(x_i-\\bar{x})}{\\sum_{i=1}^mx_i^2-{\\frac{1}{m}}{\\bigl({\\sum_{i=1}^mx_i}\\bigr)}^2}\\qquad (4) \\\\\n",
+    "& b={\\frac{1}{m}}\\sum_{i=1}^m(y_i-\\omega x_i)\\qquad(5)\n",
+    "\\end{align}$$\n",
     "> 其中$\\bar{x}=\\frac{1}{m}\\sum_{i=1}^mx_i$为$x$的均值.\n",
     "\n",
     "多元线性回归$(multivariate\\;linear\\;regression)$\n",
     "----------------------------------------\n",
-    "\n"
+    "> 对于\n",
+    "$$f(\\bf {x_i})={\\bf \\omega}^T \\bf {x_i} + b$$\n",
+    "把$\\omega$和$b$吸收入向量形式$\\hat{\\omega}=(\\omega;b)$，相应的，把数据集$D$表示为一个$m\\times (d+1)$大小的矩阵$X$，其中每行对于于一个示例，该行前$d$个属性值，最后一个元素恒置为1，即\n",
+    "$$X=\n",
+    "    \\begin{pmatrix}\n",
+    "        x_{11} & x_{12} & \\cdots & x_{1d} & 1 \\\\\n",
+    "        x_{21} & x_{22} & \\cdots & x_{2d} & 1 \\\\\n",
+    "        \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    "        x_{m1} & x_{m2} & \\cdots & x_{md} & 1 \\\\\n",
+    "    \\end{pmatrix}\n",
+    "    =\n",
+    "    \\begin{pmatrix}\n",
+    "       x_1^T & 1 \\\\\n",
+    "       x_2^T & 1 \\\\\n",
+    "       \\vdots & \\vdots \\\\\n",
+    "       x_m^T & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "$$\n",
+    "> 再把标记也写成向量的形式$y=(y_1;y_2;\\cdots;y_m)$，则根据(1)式有\n",
+    "$$\\hat{\\omega}^*=arg\\;min_{\\hat{\\omega}}(y-X\\hat{\\omega})^T(y-X\\hat{\\omega})$$\n",
+    "> 令$E_{\\hat{\\omega}}=\\frac{1}{2}(X\\hat{\\omega}-y)^2$，转换为矩阵运算如下\n",
+    "$$\\begin{align}\n",
+    "E_{\\hat{\\omega}} &=\\frac{1}{2}(X\\hat{\\omega}-y)^T(X\\hat{\\omega}-y) \\\\\n",
+    "& =\\frac{1}{2}(\\hat{\\omega}^T X^T-y^T)(X\\hat{\\omega}-y) \\\\\n",
+    "& =\\frac{1}{2}(\\hat{\\omega}^TX^TX\\hat{\\omega}-\\hat{\\omega}^TX^Ty-y^TX\\hat{\\omega}+y^Ty) \\\\\n",
+    "& =\\frac{1}{2}(\\hat{\\omega}^TX^TX\\hat{\\omega}-y^TX\\hat{\\omega}-y^TX\\hat{\\omega}+y^Ty) \\\\\n",
+    "& =\\frac{1}{2}(\\hat{\\omega}^TX^TX\\hat{\\omega}-2y^TX\\hat{\\omega}+y^Ty)\\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "> 对$\\hat{\\omega}$求导得到\n",
+    ">> 矩阵求导公式： $$ssss$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ \\boldsymbol{y} = w.\\boldsymbol{x}+b $\n",
-    "\n",
-    "\n",
-    "$$\\begin{gather} \\mathcal{L}(y,\\hat{y}) = \\dfrac{1}{M} \\sum_{i=1}^{M} (\\hat{y}_i-y_i)^2\\\\ \\end{gather}$$\n",
-    "\n",
-    "\n",
-    "$$\\begin{gather} \\mathcal{L}(y,x,w) = \\dfrac{1}{M} \\sum_{i=1}^{M} \\big(\\hat{y}_i- (w^Tx_i+b)\\big)^2\n",
-    "\\end{gather}$$\n",
-    "\n",
-    "$$ \\begin{gather} \\dfrac{\\partial\\mathcal{L}(y,x,w)}{\\partial w} = -\\dfrac{1}{M} \\sum_{i=1}^{M} 2x_i\\big(\\hat{y}_i - (w^Tx_i+b)\\big)\n",
-    "\\end{gather} $$\n",
-    "$$ \\begin{gather} \\dfrac{\\partial\\mathcal{L}(y,x,w)}{\\partial b} = -\\dfrac{1}{M} \\sum_{i=1}^{M} 2\\big(\\hat{y}_i - (w^Tx_i+b)\\big)\\\\ \\end{gather} $$\n",
-    "Remember from calculus that the gradient points in the direction of steepest ascent, but since we want our cost to decrease we invert its symbol, therefore getting the Eqs. 5 and 6:\n",
-    "\n",
-    "$$ \\begin{gather} w = w - \\alpha \\dfrac{\\partial\\mathcal{L}(y,x,w)}{\\partial w} \\end{gather} $$\n",
-    "$$ \\begin{gather} b = b - \\alpha \\dfrac{\\partial\\mathcal{L}(y,x,w)}{\\partial b} \\end{gather} $$\n",
-    "\n",
-    "$P = P - \\alpha \\dfrac{\\partial\\mathcal{L}(y,x,P)}{\\partial P}$\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "> Lasso回归和岭回归最重要的区别是，岭回归中随着惩罚项增加时，所以项都会减小，但是仍然保持非0的状态，然而Lasso回归中，随着惩罚项的增加时，越来越多的参数会直接变为0，正是这个优势使得lasso回归容易用作特征的选择（对应参数非0项），因此lasso回归可以说能很好的保留那些具有重要意义的特征而去掉那些那些意义不大甚至毫无意义的特征（如果是超多维的稀疏矩阵，这难道不是在垃圾中寻找黄金的“掘金术”吗？），而岭回归永远不会认为一个特征是毫无意义的。 \n",
     ">      在某些情况下，L1正则化真是非常好的一个东西啊，因为他的本领和解决问题的绝招就是倾向于将越多的参数变为0，也就意味着最终的近似解只依赖很少的变量，所以它也是最近时间很火的压缩感知的基石，抓住事物的本质，抓住主要矛盾，也许有时候面面俱到（比如说什么特征都照顾到）反而什么认识也得不出，所以我不成熟的认识是：L1正则化从实现层面上，提出了一个非常好的技术路线，从而实现了马克思主义哲学上的如何“抓主要矛盾”，诸多感慨就是，看了大量机器学习算法，降维，投影或者影射（嵌入），缩减，压缩，隐含变量近似分解等思想随处可见，似乎让我感觉到在某种思想的指引下，这些方法心有灵犀，但是也有一个担忧就是感觉，机器学习的算法总是跳不出这个逻辑框架和圈子，虽然形式看丰富多彩，效果也在一定程度上各异，但我还是希望能看到更多的完全不一样的逻辑框架和思路，害怕我们在进行循环证实或者说“小修小补”，而没有全新的革命性突破，没有进行基因“突变”，类似于“收敛到一个局部最优解”，我们是不是应该像遗传算法中的“灾变”那样勇敢地跳出来？从这个角度来说，我个人比较偏爱深度学习，尤其是那个琢磨不定的人工神经网络模型（虽然不喜欢他还是采用了和Logist回归中类似的Sigmoid函数来模拟神经元的输出），不好意思，跑偏了。"
    ]
